namespaces/live.cloud-platform.service.justice.gov.uk/moj-dashboard-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "moj-dashboard-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Central Digital"
    cloud-platform.justice.gov.uk/slack-channel: "mission-brilliant-experiment"
    cloud-platform.justice.gov.uk/application: "MOJ Dashboard"
    cloud-platform.justice.gov.uk/owner: "Mission Brilliant Performance Reporting Team: missionbrilliantperformancereportingteam@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/moj-dashboard"
    cloud-platform.justice.gov.uk/team-name: "mission-brilliant-performance-reporting"
    cloud-platform.justice.gov.uk/review-after: ""
